Bug 454044 - TM: JSOP_NOT needs isPromoteInt/::demote help.